k8s/apps/internal/media-server/overseerr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: overseerr
  namespace: media-server
  labels:
    app: overseerr
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
      - name: overseerr
        image: "lscr.io/linuxserver/overseerr:2021.12.12"
        # image: "nginx:latest"
        imagePullPolicy: IfNotPresent
        environment:
        - LOG_LEVEL=debug
        - TZ=America/Chicago
        volumeMounts:
        - mountPath: /app/config
          name: appdata
      volumes:
      - name: appdata
        persistentVolumeClaim:
          claimName: overseerr-longhorn-pvc # change to data target pvc
