k8s/apps/internal/media-server/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: media-server
spec:
  selector:
    app: overseerr
  ports:
  - name: http
    targetPort: 5055
    port: 5055
