k8s/apps/internal/media-server/overseerr/smb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: samba-server-service
  namespace: media-server
spec:
  type: LoadBalancer
  loadBalancerIP: 10.28.10.201
  ports:
    - name: smb
      port: 445
      targetPort: 445
    - name: netbios-ssn
      port: 139
      targetPort: 139
  selector:
    app: samba-server
